<resources>
    <string name="app_name">Exemplo08</string>
    <string name="nome">Nome</string>
    <string name="ok">Ok</string>
    <string name="email">e-mail</string>
    <string name="observacoes">observações</string>
    <string name="enviar">enviar</string>
    <string name="lista_de_produtos">Lista de Produtos</string>
    <string name="produto_a">Produto A</string>
    <string name="reais_100">R$100,00</string>
    <string name="produto_b">Produto B</string>
    <string name="reais_200">R$200,00</string>
    <string name="produto_c">Produto C</string>
    <string name="reais_300">R$300,00</string>
    <string name="cancelar">Cancelar</string>
    <string name="comprar">" Comprar "</string>
    <string name="senha">senha</string>
    <string name="usuario">usuario</string>
    <string name="login">login</string>
    <string name="numeroUm">número um</string>
    <string name="numeroDois">número dois</string>
    <string name="somar">somar</string>
    <string name="resultado">resultado</string>
    <string name="scrollview">ScrollView</string>
</resources>
