<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#cccccc"
    android:padding="10dp">

    <TextView
        android:id="@+id/labelUsuario"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelUsuario"
        android:background="@android:drawable/editbox_background"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoUsuario"
        android:gravity="left"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/labelSenha"
        android:layout_toRightOf="@id/labelSenha"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/campoSenha"
        android:layout_marginTop="10dp"
        android:text="@string/login" />
</RelativeLayout>